--- a/theseus/media/index.html
+++ b/theseus/media/index.html
@@ -290,7 +290,7 @@
             <p class="mb-0">
               <a href="https://www.bloomberglinea.com/opinion/las-elecciones-en-chile-dan-un-ejemplo-de-buenos-modales/?reader_id=READER_ID&url=SOURCE_URL&_=RANDOM/"
                  target="_blank" rel="noopener noreferrer">
-                Read the full article
+                Read more…
               </a>
             </p>
           </div>
@@ -311,12 +311,12 @@
           </div>
 
           <div class="media-content-col">
-            <h5 class="mb-1">Las Últimas Noticias</h5>
+            <h5 class="mb-1">Las Últimas Noticias - Interview</h5>
             <p class="mb-1">
               Interview in Las Últimas Noticias about the lessons from Chile’s constitutional process and political realignment.
             </p>
             <p class="mb-0">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.lun.com/Pages/NewsDetail.aspx?dt=2025-11-16&NewsID=554990&BodyID=0&PaginaId=12" target="_blank" rel="noopener noreferrer">
                 Read more…
               </a>
             </p>
@@ -338,13 +338,13 @@
           </div>
 
           <div class="media-content-col">
-            <h5 class="mb-1">T13</h5>
+            <h5 class="mb-1">T13 - Interview</h5>
             <p class="mb-1">
-              TV interview discussing Chile’s political crisis, constitutional reform and the arguments developed in the book.
+              Interview discussing Chile’s political crisis, constitutional reform and the arguments developed in the book.
             </p>
             <p class="mb-0">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                Ver entrevista
+              <a href="https://www.t13.cl/noticia/ex-ante/nacional/kenneth-bunker-su-nuevo-libro-estallido-social-fue-una-farsa-26-11-2025" target="_blank" rel="noopener noreferrer">
+                Read more…
               </a>
             </p>
           </div>
@@ -365,13 +365,13 @@
           </div>
 
           <div class="media-content-col">
-            <h5 class="mb-1">Ex-Ante</h5>
+            <h5 class="mb-1">Ex-Ante - Interview</h5>
             <p class="mb-1">
               Interview on the political lessons of the failed constitutional processes and the limits of institutional transformation.
             </p>
             <p class="mb-0">
-              <a href="#" target="_blank" rel="noopener noreferrer">
-                Leer la nota completa
+              <a href="https://www.ex-ante.cl/kenneth-bunker-y-su-nuevo-libro-el-estallido-social-fue-una-farsa/" target="_blank" rel="noopener noreferrer">
+                Read more…
               </a>
             </p>
           </div>
