--- a/index.html
+++ b/index.html
@@ -340,6 +340,9 @@
 <hr>
 <ul>
 
+
+<li><strong>Las Últimas Noticias</strong>. <a href="https://www.lun.com/Pages/NewsDetail.aspx?dt=2025-11-16&NewsID=554990&BodyID=0&PaginaId=12">"El estallido social y la convención constitucional van a quedar en la memoria de las personas como algo negativo".</a> 16 November, 2025.</li>
+
 <li><strong>Chile AS</strong>. <a href="https://chile.as.com/actualidad/que-diferencia-las-candidaturas-de-kast-y-kaiser-segun-los-expertos-pelea-abierta-de-cara-a-las-elecciones-2026-f202511-n/">Qué diferencia las candidaturas de Kast y Kaiser, según los expertos: pelea abierta de cara a las Elecciones 2026.</a> 12 November, 2025.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-a-kaiser-no-le-sirve-tomar-una-posicion-tan-extrema/">Kenneth Bunker: “A Kaiser no le sirve tomar una posición tan extrema”.</a> 04 November, 2025.</li>
