--- a/theseus/media/index.html
+++ b/theseus/media/index.html
@@ -378,7 +378,35 @@
         </div>
       </div>
 
-      <!-- You can easily add more media items by copying one of the blocks above -->
+      <!-- ========= MEDIA ITEM 4 ========= -->
+      <div class="media-card">
+        <div class="media-item-inner">
+          <div class="media-logo-col">
+            <a href="#" target="_blank" rel="noopener noreferrer">
+              <img src="https://kennethbunker.github.io/theseus/img/nicole.png"
+                   alt="Nicole Rodríguez"
+                   class="media-logo"
+                   loading="lazy"
+                   decoding="async">
+            </a>
+          </div>
+
+          <div class="media-content-col">
+            <h5 class="mb-1">Nicole Rodríguez - Podcast</h5>
+            <p class="mb-1">
+              Interview on the 2025 Chilean presidential election and the book.
+            </p>
+            <p class="mb-0">
+              <a href="https://www.youtube.com/watch?v=69z3OKO7sf4" target="_blank" rel="noopener noreferrer">
+                Read more…
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Add more media items by copying one of the blocks above -->
+
 
       <div class="text-center my-4">
         <a class="btn btn-sm btn-outline-secondary" href="#top">Back to top</a>
