--- a/lun/index.html
+++ b/lun/index.html
@@ -143,7 +143,7 @@
 <img src="/img/lun/20251119.jpeg">
 <img src="/img/lun/20251121.jpeg">
 <img src="/img/lun/20251126.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20251128.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
