--- a/theseus/index.html
+++ b/theseus/index.html
@@ -186,6 +186,27 @@
          BUY HERE
       </a>
 
+      <!-- IN THE PRESS BOX -->
+      <div style="
+        margin-top:10px;
+        padding:8px 10px;
+        border:1px solid #ddd;
+        border-radius:6px;
+        font-size:12px;
+        line-height:1.4;
+        background:#f8f9fa;
+      ">
+        <a href="https://kennethbunker.github.io/theseus/media/"
+           target="_blank"
+           rel="noopener noreferrer"
+           style="text-decoration:none; font-weight:bold; color:#0077cc;">
+          In the press
+        </a>
+        <div style="margin-top:2px; color:#555;">
+          Coverage, interviews &amp; podcasts
+        </div>
+      </div>
+      
     </div>
 
     <!-- CLOSE LINK -->
