--- a/theseus/index.html
+++ b/theseus/index.html
@@ -186,27 +186,7 @@
          BUY HERE
       </a>
 
-      <!-- IN THE PRESS BOX -->
-      <div style="
-        margin-top:10px;
-        padding:8px 10px;
-        border:1px solid #ddd;
-        border-radius:6px;
-        font-size:12px;
-        line-height:1.4;
-        background:#f8f9fa;
-      ">
-        <a href="https://kennethbunker.github.io/theseus/media/"
-           target="_blank"
-           rel="noopener noreferrer"
-           style="text-decoration:none; font-weight:bold; color:#0077cc;">
-          In the press
-        </a>
-        <div style="margin-top:2px; color:#555;">
-          Coverage, interviews &amp; podcasts
-        </div>
-      </div>
-      
+
     </div>
 
     <!-- CLOSE LINK -->
@@ -299,6 +279,35 @@ window.addEventListener('load', function() {
           </strong>
         </p>
       </div>
+
+
+<!-- ===== PRESS / MEDIA BOX ===== -->
+<div class="media-card" style="max-width:700px; margin:30px auto;">
+  <div class="media-item-inner">
+    
+    <!-- LEFT: logo -->
+    <div class="media-logo-col" style="flex:0 0 33%; display:flex; justify-content:center; align-items:center; padding-right:15px;">
+      <a href="https://kennethbunker.github.io/theseus/press" target="_blank" rel="noopener noreferrer">
+        <img src="https://kennethbunker.github.io/theseus/img/press.png"
+             alt="Press and Media"
+             class="media-logo"
+             style="max-width:100%; max-height:60px;">
+      </a>
+    </div>
+
+    <!-- RIGHT: text -->
+    <div class="media-content-col" style="flex:0 0 67%; border-left:1px solid #ddd; padding-left:20px; display:flex; flex-direction:column; justify-content:center;">
+      <h5 class="mb-1">Press & Media Coverage</h5>
+      <p class="mb-1">Interviews, reviews, and articles covering the book.</p>
+      <p class="mb-0">
+        <a href="https://kennethbunker.github.io/theseus/press" target="_blank" rel="noopener noreferrer">
+          View all coverage →
+        </a>
+      </p>
+    </div>
+
+  </div>
+</div>
 
       <hr>
 
