--- a/theseus/index.html
+++ b/theseus/index.html
@@ -282,32 +282,18 @@ window.addEventListener('load', function() {
 
 
 <!-- ===== PRESS / MEDIA BOX ===== -->
-<div class="media-card" style="max-width:700px; margin:30px auto;">
-  <div class="media-item-inner">
-    
-    <!-- LEFT: logo -->
-    <div class="media-logo-col" style="flex:0 0 33%; display:flex; justify-content:center; align-items:center; padding-right:15px;">
-      <a href="https://kennethbunker.github.io/theseus/press" target="_blank" rel="noopener noreferrer">
-        <img src="https://kennethbunker.github.io/theseus/img/press.png"
-             alt="Press and Media"
-             class="media-logo"
-             style="max-width:100%; max-height:60px;">
-      </a>
-    </div>
-
-    <!-- RIGHT: text -->
-    <div class="media-content-col" style="flex:0 0 67%; border-left:1px solid #ddd; padding-left:20px; display:flex; flex-direction:column; justify-content:center;">
-      <h5 class="mb-1">Press & Media Coverage</h5>
-      <p class="mb-1">Interviews, reviews, and articles covering the book.</p>
-      <p class="mb-0">
-        <a href="https://kennethbunker.github.io/theseus/press" target="_blank" rel="noopener noreferrer">
-          View all coverage →
-        </a>
-      </p>
-    </div>
-
-  </div>
+<div style="border: 1px solid #999; border-radius: 12px; padding: 20px; margin: 20px 0; width: 100%; text-align: center; box-sizing: border-box;">
+  <p style="margin: 0;">
+    <strong>In the Press</strong><br><br>
+    <a href="https://kennethbunker.github.io/theseus/press"
+       target="_blank"
+       rel="noopener noreferrer"
+       style="text-decoration: none; font-weight: bold; color: #0077cc;">
+      Read coverage, interviews &amp; reviews
+    </a>
+  </p>
 </div>
+
 
       <hr>
 
