--- a/theseus/index.html
+++ b/theseus/index.html
@@ -327,7 +327,7 @@ window.addEventListener('load', function() {
         rel="noopener noreferrer"
         style="text-decoration: none; font-weight: bold; color: #0077cc;"
       >
-        Read Bloomberg coverage, interviews &amp; reviews →
+        Coverage: interviews, mentions, podcasts, reviews →
       </a>
     </div>
 
