--- a/index.html
+++ b/index.html
@@ -2403,6 +2403,9 @@ ong>El Muro</strong>. <a href="http://elmuro.cl/noticias/ps-la-dc-los-partidos-t
 <hr> 
 <ul>
 
+
+<li><strong>Newsweek</strong>. <a href="https://www.newsweek.com/trump-may-get-a-new-far-right-friend-in-south-america-for-christmas-11143819">Trump May Get a New Far-Right Friend in South America for Christmas.</a> 7 December, 2025.</li> 
+
 <li><strong>Clarín</strong>. <a href="https://www.clarin.com/mundo/elecciones-chile-derecha-sorprende-gana-terreno-parlamento_0_HpmR0tiAm.html">Elecciones en Chile: la derecha sorprende y gana terreno en el Parlamento.</a> 22 November, 2025.</li> 
 
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberglinea.com/opinion/las-elecciones-en-chile-dan-un-ejemplo-de-buenos-modales/?reader_id=READER_ID&url=SOURCE_URL&_=RANDOM/">Las elecciones en Chile dan un ejemplo de buenos modales.</a> 18 November, 2025.</li> 
