--- a/lun/index.html
+++ b/lun/index.html
@@ -144,7 +144,7 @@
 <img src="/img/lun/20251121.jpeg">
 <img src="/img/lun/20251126.jpeg">
 <img src="/img/lun/20251128.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20251215.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
