--- a/theseus/index.html
+++ b/theseus/index.html
@@ -746,9 +746,8 @@ window.addEventListener('load', function() {
 
           <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
             <a href="https://doi.org/10.1007/978-3-031-96463-3_8" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT <span class="sr-only">— Chapter 8</span></a>
-            <!-- ✅ UX: DATA link disabled until available -->
-            <button class="btn btn-sm btn-outline-secondary font-weight-bold" disabled style="pointer-events:none;">DATA</button>
-            <a href="https://github.com/kennethbunker/theseus/tree/main/chapter8" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE <span class="sr-only">— Chapter 8</span></a>
+            <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA <span class="sr-only">— Chapter 8</span></a>
+            <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE <span class="sr-only">— Chapter 8</span></a>
             <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA <span class="sr-only">— Chapter 8</span></a>
           </div>
 
