--- a/index.html
+++ b/index.html
@@ -2407,6 +2407,9 @@ ong>El Muro</strong>. <a href="http://elmuro.cl/noticias/ps-la-dc-los-partidos-t
 <hr> 
 <ul>
 
+<li><strong>ABC News</strong>. <a href="https://abcnews.go.com/International/wireStory/conservative-kasts-victory-chile-suggests-hard-pro-trump-128433900">Conservative Kast's victory in Chile suggests a hard-right, pro-Trump surge across Latin America.</a> 14 December, 2025.</li> 
+
+<li><strong>Associated Press</strong>. <a href="https://apnews.com/article/election-chile-kast-jara-boric-trump-05f915fd5eda909c13fd283f90f8d8e5">Conservative Kast's victory in Chile suggests a hard-right, pro-Trump surge across Latin America.</a> 14 December, 2025.</li> 
 
 <li><strong>Financial Times</strong>. <a href="https://www.ft.com/content/6a078bef-1cee-4266-87da-dd0747152640
 ">Chileans choose between rightwinger and communist in presidential vote.</a> 14 December, 2025.</li> 
