--- a/lun/index.html
+++ b/lun/index.html
@@ -146,7 +146,7 @@
 <img src="/img/lun/20251128.jpeg">
 <img src="/img/lun/20251215.jpeg">
 <img src="/img/lun/20251216.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20251217.jpeg">
 </div>
 
 <div class="img-container">
