--- a/lun/index.html
+++ b/lun/index.html
@@ -137,6 +137,19 @@
 
 
 <div class="img-container">
+<img src="/img/lun/20251225.jpeg">
+<img src="/img/lun/20251230.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/blanco.jpeg">
+</div>
+
+<div class="img-container">
 <img src="/img/lun/20251023.jpeg">
 <img src="/img/lun/20251116.jpeg">
 <img src="/img/lun/20251117.jpeg">
