--- a/lun/index.html
+++ b/lun/index.html
@@ -139,7 +139,7 @@
 <div class="img-container">
 <img src="/img/lun/20251225.jpeg">
 <img src="/img/lun/20251230.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20260104.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
