--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
 
+<p>Forthcoming. “Decades of democracy: insights into the political landscape of Chile.”<em> Nature: Humanities and Social Sciences Communications</em>. <a href="https://doi.org/10.1057/s41599-025-06180-1">doi</a></mark></p>
 
 <p>2025. <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Palgrave Macmillan (368 pages) <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview4">doi</a></mark></p>
 
