--- a/lun/index.html
+++ b/lun/index.html
@@ -141,7 +141,7 @@
 <img src="/img/lun/20251230.jpeg">
 <img src="/img/lun/20260104.jpeg">
 <img src="/img/lun/20260114.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20260115.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
