--- a/cpld/about/cpld-about.html
+++ b/cpld/about/cpld-about.html
@@ -191,13 +191,13 @@
             <h1 class="page-title">About CPLD</h1>
 
             <div class="content">
-                <p>The <strong>Chilean Political Landscape Dataset (CPLD)</strong> is a comprehensive longitudinal database that consolidates district-level electoral outcomes across more than three decades of Chilean democracy, from 1989 to 2024.</p>
+                <p>The <strong>Chilean Political Landscape Dataset (CPLD)</strong> is the first comprehensive longitudinal database of its kind, consolidating district-level electoral outcomes across more than three decades of Chilean democracy, from 1989 to 2024. The dataset is updated regularly to incorporate new electoral results and refined indicators.</p>
 
-                <h2 class="section-title">Background</h2>
+                <h2 class="section-title">The Data</h2>
                 
-                <p>Chile was long considered a beacon of stability in a turbulent region, until the 2019 social outburst and two failed constitutional processes prompted a reassessment. Much of the literature relied on national aggregates that obscured underlying dynamics which could have raised institutional alerts.</p>
+                <p>This dataset addresses a critical gap in Chilean political research. Much of the existing literature relied on national aggregates that obscured underlying dynamics—variations that district-level data can reveal. The CPLD provides standardized, granular data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics at the subnational level.</p>
 
-                <p>This dataset addresses a critical gap in Chilean political research by providing standardized, district-level data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics.</p>
+                <p>By offering consistent, comparable measures across 346 districts and 35 years, the CPLD allows researchers to detect patterns invisible in aggregate statistics: the early onset of party system fragmentation, ideological drift at the district level, and asymmetric changes across the political spectrum. This level of detail is essential for understanding how Chile's once-stable democracy evolved through periods of institutional reform and political crisis.</p>
 
                 <h2 class="section-title">Dataset Scope</h2>
 
@@ -265,10 +265,6 @@
         </main>
 
         <footer>
-            <p>Kenneth Bunker · <a href="mailto:kenneth.bunker@uss.cl">kenneth.bunker@uss.cl</a></p>
+            <p>Kenneth Bunker · <a href="/cdn-cgi/l/email-protection#28434d46464d5c40064a5d46434d5a685d5b5b064b44"><span class="__cf_email__" data-cfemail="ea818f84848f9e82c4889f84818f98aa9f9999c48986">[email&#160;protected]</span></a></p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Universidad de Verona</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2025 CPLD · Licensed under CC BY-NC-ND 4.0</p>
-        </footer>
-    </div>
-</body>
-</html>
+            <p style
